--- a/style.css
+++ b/style.css
@@ -1,59 +1,82 @@
-body{
-  background: #fff url('images/gradbg.jpg') top left repeat-x;
-  color: #000;
-  margin: 0;
-  padding:0;
-  border: 0;
-  font-family: Verdana, Arial, sans-serif; font-size: 1em;
+body {
+    background-color: yellow;
 }
-div {
-  width: 800px;
-  margin: 0 auto;
+header{
+    margin: -20px;
 }
-#bggraphic {
-  background: url('images/pen.png') top left no-repeat;
-  height: 278px;
-  width: 362px;
-  position: absolute;
-  left: 50%;
-  z-index: 100;
+
+
+
+#imagen {
+    text-align: center;
+    background-color: #333;
+    
 }
-h1 {
-  text-align: center;
-  text-transform: uppercase;
-  font-size: 1.5em;
-  margin-bottom: 30px;
-  background: url('images/headbg.png') top left repeat;
-  padding: 10px 0;
-  color: red;
+#onePiece{
+    text-align: center;
 }
-#references cite {
-  margin: 1em 0 0 3em;
-  text-indent: -3em;
-  display: block;
-  font-style: normal;
-  padding-right: 3px;
-  
-}
-.website {
-  border-right: 5px solid blue;
-  background: url('images/web.png') top right no-repeat;
+
+nav ul {
+    text-align: center;
+    color: orange;
+    padding: 10px;
+    text-align: center;
+    background-color: #333;
 
 }
-.book {
-  border-right: 5px solid red;
-  background: url('images/llibres.png') top right no-repeat;
-  color: red;
+nav li{
+    display: inline;
+    padding: 10px;
 }
-.article {
-  border-right: 5px solid green;
-  background: url('images/articles.png') top right no-repeat;
+
+
+#fondo {
+    padding: 20px;
+    background-color: #fff;
+    margin-left: 10%;
+    margin-right: 10%;
+
 }
-#footer {
-  font-size: 0.5em;
-  border-top: 1px solid #000;
-  margin-top: 20px;
+
+ #article {
+    margin: 0 auto;
 }
-#footer {
-  display: none;
+h1{
+    color: rgb(4, 60, 145);
+    text-align: left;       
+    size: 20px;
 }
+h2 {
+    color: #333;
+    text-align: left;
+    size: 10px;
+}
+
+p {
+    line-height: 1.6;
+    color: #333;
+}
+
+blockquote.twitter-tweet {
+    background-color: #fff;
+    border: 1px solid #ddd;
+    padding: 15px;
+    margin: 20px 0;
+}
+
+footer {
+    background-color: rgb(134, 73, 190);
+    border-top: 2px solid #000;
+    padding: 25px;
+    text-align: center;
+}
+
+footer img {
+    max-width: 500px;
+}
+
+#wiki {
+    padding-bottom: 20px;
+
+}
+
